# FighterSimulator

./: Cargo.toml  README.md
src/: fight.rs  fight_fighter.rs  fighter.rs  lib.rs  observer.rs  report.rs  stats.rs
