[package]
name = "fighter_simulator"
version = "0.1.0"
authors = ["Steven Malis <smmalis37@gmail.com>"]
edition = "2021"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
enum-map = { version = "2.4", features = ["serde"] }
rayon = "1.5"
arrayvec = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
