[package]
name = "fighter_simulator"
version = "0.1.0"
authors = ["Steven Malis <smmalis37@gmail.com>"]
edition = "2021"

[dependencies]
enum-map = { version = "2.7", features = ["serde"] }
fastrand = "2.0"
rayon = "1.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
